# IServ-Ausleihe-Ausgabe

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  package-lock.json  pyproject.toml  setup.bat  start - portable.bat  start.bat  start.sh
automation/: __init__.py  e2e_modus_b.py  e2e_parallel.py  e2e_smoke.py  recovery_test.py  spike_a_counter.py  spike_b_parallel.py  test_printer.py  worker.py
client/: client.py  requirements.txt
docs/: CHANGELOG.md  PLAN.md  deployment.md  hardening_2026-06-18.md  phase2_e2e_2026-06-15.md  phase4_modus_b_2026-06-15.md  rueckbau_plan_VORLAGE.md  test_status.md
docs/spikes/: spike_a_protokoll.md  spike_b_protokoll.md
server/: __init__.py  app.py  book_order.py  booklist_store.py  config.py  hub.py  iserv_client.py  loan_slip.py  main.py  package-lock.json  package.json  print_queue.py  printer_store.py  printing.py  ratelimit.py  server.js  sessions.py  state.py  tls.py
server/public/: scanner.html
server/routes/: _deps.py  api.py  auth.py  booklists.py  classes.py  helpers.py  modus_b.py  queue.py  settings.py  slips.py  ws.py
tests/: test_api_guards.py  test_booking_gate.py  test_booking_precheck.py  test_booking_result.py  test_booklist_repush.py  test_booklist_store.py  test_class_book_order.py  test_hub.py  test_hub_serialization.py  test_iserv_client_borrower.py  test_iserv_client_locking.py  test_loan_slip.py  test_print_queue.py  test_printer_store.py  test_printing.py  test_queue_flow.py  test_queue_progress.py  test_ratelimit.py  test_scanner_reconnect.py  test_sessions.py  test_stale_guards.py  test_state_contract.py  test_tls.py  test_worker_pool.py  test_ws_scanner.py
web/: common.js  host-render.js  host-state.js  host-ws.js  host.css  host.html  host.js  leitstand.html  qr-display.html  scan-render.js  scan-state.js  scan-ws.js  scan.html  scan.js  student.html  student.js
