[project]
name = "ausleihe-ausgabe"
version = "0.1.0"
description = "IServ Ausleihe-Ausgabe — Handy-Scanner für Stapelerstellung und Live-Ausgabe (Seminarfachprojekt)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "playwright>=1.50",
    "python-dotenv>=1.0",
    "qrcode[pil]>=8.0",
    "cryptography>=42",
    "iserv-ausleihe-api",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.uv.sources]
iserv-ausleihe-api = { path = "../ausleihe-api", editable = true }

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=server --cov-report=term-missing"
