[project]
name = "ausleihe-ausgabe"
version = "0.1.0"
description = "IServ Ausleihe-Ausgabe — Handy-Scanner für Stapelerstellung und Live-Ausgabe (Seminarfachprojekt)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "playwright>=1.50",
    "python-dotenv>=1.0",
    "qrcode[pil]>=8.0",
    "cryptography>=42",
    "pymupdf>=1.24",
    "iserv-ausleihe-api",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[tool.uv.sources]
iserv-ausleihe-api = { path = "../ausleihe-api", editable = true }

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=server --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["automation/out", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    # E501: line-length is already capped at 100 (vs. ruff's usual 88), but ~70
    # existing lines across nearly every module (deutsche Bezeichner, IServ-URLs,
    # WS-payload dicts, Playwright-Selektoren) still exceed it by a few chars.
    # Rewrapping all of them is a pure formatting churn that belongs in a
    # dedicated formatting wave, not the Welle-0 linter bootstrap. Revisit once
    # `ruff format` is introduced.
    "E501",
    # SIM105: `except Exception: pass` -> `contextlib.suppress(Exception)` is
    # stylistic and touches ~26 call sites, several inside the IServ read-path
    # and Playwright worker where the exact except-block shape is deliberate
    # (see `except Exception:  # noqa: BLE001` convention below). Behavior is
    # equivalent either way, but rewriting all of them is out of scope for a
    # zero-risk lint bootstrap; revisit in a later refactor wave.
    "SIM105",
]
